EEVEE: Black surfaces on Intel GPU #122837
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
13 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#122837
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
Graphics card: Intel(R) HD Graphics 5500 4.4.0 - Build 20.19.15.5063
Operating system: macOS-13.6.7-x86_64-i386-64bit 64 Bits
Graphics card: Metal API AMD Radeon Pro 575 1.2
Blender Version
Broken: blender-4.2.0-beta+v42.7886ce7bd47a-windows.amd64-release
Worked: N/A
Short description of error
I just tried the latest Blender 4.2 beta (Factory Default), and the new EEVEE Next is rendering the default Cube Black.
There is a Error message in the viewport : Shadow Buffer Full, may result in missing shadows and lower performance
Edit: 'Another Error appeared: Too many shadow updates'
Moving around the viewport is slow. Cycles works alright, but I rarely use it. EEVEE was a lot quicker than Cycles, now it's the other way round.
There are No crashes when switching between Solid, Material and Rendered views....It is slow though when changing from Solid, to Material or Rendered the first time.
EEVEE Next - Material and Rendered View - Does not work
Cycles : Material View Does not work : Rendered View works
Exact steps for others to reproduce the error
Please update GPU driver and re-check. Version 20.19.15.5171 should be available.
@iss
Thanks for replying! Already tried that , Version 20.19.15.5171 does not work with Blender 4.0 and above.
#113124 (comment)
blender/blender-manual#104638 (comment)
Even though this ticket is a Mac #122551, the issue seems similar . An intel chip is mentioned in one of the comments.
@TH-10 Possibly could be same issue, though Mac uses Metal subsystem, so not sure if these are the same. Feel free to subscribe there and when the issue will be resolved, you can test on your system.
The same problem with my Dell Inspiron 5558 core i7 laptop
Graphics intel (R) 5500 HD. I have tried every build of EEVEE next but it is not solved even with blender 4.2 beta .
I have tested SSGI addon before and it was working nice and cycle also works fine on my pc .
Report with similar error has already been merged there: #122551 (comment)
Since
7a8e04fcb1
has been commited, please try tomorrows build and report back if the issue is fixed for youblender-4.2.0-beta+v42.6f724b83c663-windows.amd64-release
The default cube black is still rendering black.
this issue has not been fixed yet
I'll add it here as well:
1065353216
is0x3f800000
, which is 32bit floating point1.0f
. Not sure if this if of any interest... Apparently somewhere the 1.0f was interpreted as a integer in there.Concerning performance on low powered GPUs (HD 5500) we introduced the pixel size option in
Performance -> Viewport -> Pixel Size
.@Jeroen-Bakker
This has speeded up moving around the viewport............blender-4.2.0-beta+v42.b1287ad6d46c-windows.amd64-release
The Cube is still black though in Material, and Rendered view....Just reporting back in case this was fixed. I haven't tried any new 4.2 beta builds until now.
Several memory corruption issues were fixed in the past few days. Is this issue still reproducible?
@fclem
The Cube is still Black with the latest.......blender-4.2.0-beta+v42.db5cc087141a-windows.amd64-release.
The error messages do not appear anymore.
EEVEE-Next : Error - Shadow Buffer Full, may result in missing shadows and lower performanceto EEVEE: Black surfaces on Intel GPUI don't have a machine to check this, but can you check if an emission shader does work? (replace principled with a emission shader.
@Jeroen-Bakker
The Emission Shader works in Material and Rendered view......blender-4.2.0-beta+v42.549024b1cc34-windows.amd64-release
Ok this points to the stencil classify shader! Can you upload the latest system_info.txt (generated from Blender help menu). I need to check if a certain extension is supported by your platform.
If this extension isn't the reason, I do have found another possible caveat where incorrect framebuffer configuration could be bound during the stencil classification. But first we check the extensions!
BTW thanks for your patient and help with these platforms!
Another test you can do is to set the material
settings -> surface -> render method
toBlended
and see if this would render the principled bsdf.@Jeroen-Bakker
The Blended render method works in Material and Rendered view.
When that worked I tested it with a material addon I have . The Rendered method defaulted back to 'Dithered' when I replaced the material, but as soon I changed it to ‘Blended’ the Material worked correctly. It seems when I replace the material with another one, the 'Blended' reverts back to Dithered it doesn’t stay on 'Blended'.
That's Okay I don't mind helping. You Guys do a brilliant job!
Jeroen Bakker referenced this issue2024-07-01 14:47:05 +02:00
@TH-10 we saw some possible issues with the current implementation for legacy platforms. I started a new build which will appear https://builder.blender.org/download/patch/PR123989/ in an hour orso.
Can you download and see if it works better?
Okay! Just waiting for the new build to appear!
@Jeroen-Bakker
Build Patch blender-4.2.0-beta+main-PR123989.7f455a04fd85-windows.amd64-release.
Is the same as before, no difference....... Dithered Mode renders black....Blended Mode renders okay
it works with blended render method in material setting, but its as I posted the picture below.
I haven't been able to reproduce this issue locally as I don't have the same hardware. Some changes have been added, but none fixed the issue. I lowering the priority of this issue until we found a way to reproduce it.
does this issue solved ? please work on it for us we couldn't afford cycle render engine
Please help I have the same issue running on an Intel HD 6000. Windows 10 Home. I have a Dell Inpiron 5758 laptop and the latest driver from the original manufacturer (DELL) is 20.19.15.4835. Cycles works fine. All previous versions of Blender worked fine. EEVEE only shows a black scene with default settings. Turning the emission up on the Principled BSDF is the only thing that seems to do anything. Switching to blended rendering in the material does show the color of the material but there are a ton of black artifacts on the mesh when moving around the viewport.
We advice to install the latest driver from the GPU manufacturer which is intel. 20.19.15.4835 is old. It is known that Laptop builders don't automatically let you install the latest driver, so you need to get them from the Intel web-site. Note sometimes you need to uninstall the dell driver before you can install the Intel driver.
Currently developers are not able to reproduce the issues on their systems. Which is a prerequisite for solving this issue.
Thank you for the reply. I'll try to install the newer drivers and post the results here. I am aware though that some of the latest Intel drivers are broken apparently from what I have read on here and crash Blender on startup.
Can someone confirm on Intel and on AMD if enabling High quality normals 'fixes' this issue?
For AMD we are aware that there is a driver bug on old drivers where the data structures used for lower quality normals are not read correctly. In Blender 4.3 we enable a workaround for them (OpenGL only). I am not sure why the Intel is rendering black.
Hi @Jeroen-Bakker
There is no change when switching to High Quality Normals on Intel - Intel(R) HD Graphics 5500 4.4.0 - Build 20.19.15.5063. The Emission is the only thing that can produce a colour in dithered mode. I used Blender 4.2.1
I've tested on Mac Intel with MacOS Monterey and AMD Graphic card and the issue still remains after enabling "High Quality Normals". Since Blender 4.2 the Eevee on my computer it's completely broken. Im having exacly the same issue from OP, that's why i've found this thread easily on Google.
This is now affecting Snapdragon X Elite devices too - using the emission shader fixes the black cube.
After some debugging with Jeroen, it was found on a X Elite device that setting the following in
detect_workarounds
fixed the issue:However the following errors appeared with a high frequency in the console log:
Unknown if this resolves the issue on other devices.
@TH-10 Can you try starting blender with
--debug-gpu-force-workarounds
and see if that renders the cube differently?On macOs this doesn't work, but on windows might indicate a similar issue as on arm devices.
@Jeroen-Bakker
I tried:
blender_debug_gpu
blender_debug_gpu_glitchworkaround
blender_debug_log
blender_factory_startup
blender_oculus
The default cube still renders black.
As an update to this - I passed over all of this to Jesse at MS, and the Qualcomm GPU team - for now on the X Elite devices, at least, I will enable the shader draw parameter workaround.
Jesse said that he thinks this is a GPU driver issue - with a missing barrier somewhere, or a race condition - as when attempting to replay the PIX capture of the scene, the cube rendered correctly.
Sadly for the other people in this thread, this means your issues are likely to be different, just causing the same visual bug.
I will open a seperate PR for the X Elite devices.
Any word on a fix for Intel HD 6000 still rendering the default cube black? I've been testing every 4.3 alpha daily build with no success so far. Switching to Blended mode in material options does show the material color but that's about it. Also trying to light the cube with an HDRI requires cranking up the strength of the HDRI from 1.0 to like 15 for the HDRI to have visible effect. I ran blender with debug option, don't know if this helps but these are the results
Same problem, old laptop, cant afford a new one -.-
Intel HD Graphic 4600
@Lucas-Guajardo Looks like your driver version is actually newer than what I could find on intel official website. Maybe switching versions of your driver can help, but if not, I believe you can revert the driver to whatever is latest from your windows device manager.
This is not a fix but a work around for now so you can use 4.2.
Under the object's Material - Settings: change
This will allow:
changing material colors to be fast again and show the material colors.
Viewport Shading - Rendered to function.
Viewport Shading - Material Preview does not work; materials will still show up as black.
Rendering will function again.